<resources>
    <string name="app_name">CC2 TDI202</string>

    <string name="btnAjouter">Ajouter une entreprise</string>
    <string name="btnEditer">Editer une entreprise</string>
    <string name="btnLister">Lister de tous les entreprises</string>
    <string name="btnEnrg">Enregistrer</string>
    <string name="btnAnnul">Annuler</string>
    <string name="hint1">Tapez votre Raison Sociale...</string>
    <string name="hint2">Tapez votre Adresse...</string>
    <string name="hint3">Tapez votre Capitale...</string>
    <string name="btnModif">Modifier</string>
    <string name="btnsupp">Supprimer</string>
    <string name="titreEdit">Editer une entreprise</string>

</resources>