<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditerEntreprise">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titreEdit"
        android:background="@color/teal_700"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <Spinner
        android:id="@+id/spn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/Rsocial"
        style="@style/TextAvtivite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/hint1" />
    <EditText
        android:id="@+id/adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/hint2"
        style="@style/TextAvtivite"/>

    <EditText
        android:id="@+id/capitale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/hint3"
        style="@style/TextAvtivite"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btnavtivite"
        android:text="@string/btnModif"
        android:onClick="modifier"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btnavtivite"
        android:layout_marginLeft="200dp"
        android:text="@string/btnsupp"
        android:onClick="Supp"/>



</RelativeLayout>