<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Menu Generale"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:background="@color/purple_700"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAjouter"
            android:textSize="20dp"
            android:onClick="click"
            style="@style/btnDemarage"
            android:id="@+id/ajoutE"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnEditer"
            android:textSize="20dp"
            android:onClick="click"
            style="@style/btnDemarage"
            android:id="@+id/EditE"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLister"
            android:textSize="20dp"
            android:onClick="click"
            style="@style/btnDemarage"
            android:id="@+id/ListeE"/>
    </LinearLayout>


</LinearLayout>